# Hourly-Divvy-Trip-Predictor

./: .dockerignore  .gitignore  .ipynb  Dockerfile  Makefile  README.md  checking_original_ids.ipynb  help.parquet  pyproject.toml  reverse_geocoding.ipynb  supervisord.conf
.github/workflows/: backfill_features.yml  backfill_predictions.yml  feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
.streamlit/: config.toml
cyclistic-bike-sharing-data/: pyproject.toml
data/: merge.parquet  merge_end.parquet  merge_start.parquet
data/frontend/: end_geodataframe.parquet  geographical_features_and_predictions.parquet  start_geodataframe.parquet
data/geographical/: end_rows_filled_with_guesses.json  start_rows_filled_with_guesses.json
notebooks/: 01_LOAD_AND_SAVE_RAW_DATA.ipynb  02_MEMORY_MANAGEMENT.ipynb  03_DATA_CLEANING.ipynb  04_TRANSFORM_CLEANED_DATA_INTO_TS_DATA.ipynb  04_TRANSFORM_DATA_INTO_TIME_SERIES.ipynb  04_TRANSFORM_DATA_INTO_TS_DATA.ipynb  05_TRANSFORM_RAW_DATA_INTO_TRAINING_DATA.ipynb  06_PLOT_TRAINING_DATA.ipynb  06_TRANSFORM_RAW_DATA_INTO_TRAINING_DATA.ipynb  07_BASELINE_MODEL.ipynb  08_BASELINE_MODEL.ipynb  08_XGBOOST_MODEL.ipynb  09_LIGHTGBM_MODEL.ipynb  10_LIGHTGBM_MODEL_WITH_FEATURE_ENGINEERING.ipynb  IDS.ipynb  fafa.ipynb
notebooks/active/: 01_LOAD_AND_SAVE_RAW_DATA.ipynb  02_MEMORY_MANAGEMENT.ipynb  02_TRANSFORM_RAW_DATA_INTO_TRAINING_DATA.ipynb  03_TRANSFORM_RAW_DATA_INTO_TRAINING_DATA.ipynb  04_BASELINE_MODEL.ipynb  04_PLOT_TRAINING_DATA.ipynb  05_RUN_TUNING_EXPERIMENTS.ipynb  09_HYPERPARAMETER_TUNING.ipynb  09_RUN_TUNING_EXPERIMENTS.ipynb  PLOT_TRAINING_DATA.ipynb
notebooks/defunct/: LIGHTGBM_MODEL_WITH_FEATURE_ENGINEERING.ipynb  README.md  TRANSFORM_CLEANED_DATA_INTO_TS_DATA.ipynb  XGBOOST_MODEL.ipynb
src/: config.py  data_extraction.py  data_preparation.py  data_splitting.py  data_transformations.py  feature_engineering.py  geocoding.py  hyperparameter_tuning.py  logger.py  miscellaneous.py  model.py  model_service.py  monitoring.py  paths.py  plot.py
src/core/: data.py  data_extraction.py  paths.py  (+1 more)
tests/: test_for_station_ids.py
(+51 files in other folders)
