[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kobina <maadabrandon@protonmail.com>"]

[tool.poetry.dependencies]
python = ">3.9.7, <=3.12.7"
pandas = "<2.2.0"
pyarrow = "^14.0.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
lightgbm = "^4.2.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
setuptools = "^69.1.0"
numpy = "^1.26.4"
fastparquet = "^2024.2.0"
geopy = "^2.4.1"
hsfs = "3.7.1"
hopsworks = "^3.7.0"
xgboost = "1.7.1"
streamlit = "^1.36.0"
comet-ml = "^3.45.0"
optuna = "^3.6.1"
pydeck = "^0.9.1"
streamlit-extras = "^0.5.0"
psycopg2-binary = "^2.9.10"
