[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kobina <maadabrandon@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0, <=3.12.8"
tqdm = "^4.67.1"
geopy = "^2.4.1"
streamlit = "^1.40.2"
streamlit-extras = "^0.5.0"
loguru = "^0.7.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
optuna = "^4.1.0"
setuptools = "^75.6.0"
numpy = "1.26.4"
hopsworks = "^4.1.2"
comet-ml = "^3.47.4"
pandas = "2.1.4"
sqlalchemy = "2.0.29"
psycopg2-binary = "^2.9.10"
confluent-kafka = "^2.7.0"
