[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml>=3.49.6",
    "confluent-kafka>=2.8.2",
    "geopy>=2.4.1",
    "hopsworks>=4.1.8",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "optuna>=4.2.1",
    "pandas>=2.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.29",
    "streamlit>=1.44.0",
    "streamlit-extras>=0.6.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

